# DimeView

./: .gitignore  LICENSE  README.md  controller.py  data.csv  dimeview.spec  model.py  moneymirror.spec  setup.cfg  setup.py  view.py
.github/workflows/: build.yml  windows-installer.yml
docs/examples/: sample_data.csv
scripts/: installer.nsi
src/dimeview/: __init__.py  controller.py  main.py  model.py  view.py
src/moneymirror/: __init__.py  controller.py  main.py  model.py  view.py
tests/: debug_cache.py  test_creds.py
