# setup.cfg

[metadata]
name = moneymirror
version = attr: moneymirror.__version__
description = A personal finance application.
long_description = file: README.md
long_description_content_type = text/markdown
author = Eashan Gallage
author_email = eashanpol@gmail.com
url = https://github.com/eashangallage/MoneyMirror
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial

[options]
# look for packages under src/
package_dir =
    = src
packages = find:
install_requires =
    cachetools==5.5.2
    certifi==2025.7.9
    charset-normalizer==3.4.2
    google-api-core==2.25.1
    google-api-python-client==2.176.0
    google-auth==2.40.3
    google-auth-httplib2==0.2.0
    google-auth-oauthlib==1.2.2
    googleapis-common-protos==1.70.0
    httplib2==0.22.0
    idna==3.10
    oauthlib==3.3.1
    pillow==11.3.0
    proto-plus==1.26.1
    protobuf==6.31.1
    pyasn1==0.6.1
    pyasn1_modules==0.4.2
    pyparsing==3.2.3
    PyQt6==6.9.1
    PyQt6-Qt6==6.9.1
    PyQt6_sip==13.10.2
    reportlab==4.4.2
    requests==2.32.4
    requests-oauthlib==2.0.0
    rsa==4.9.1
    uritemplate==4.2.0
    urllib3==2.5.0
python_requires = >=3.8

# ← NEW: include non-.py files shipped with your package
include_package_data = True

[options.packages.find]
where = src

# ← NEW: bundle all icons/images under moneymirror/resources/
[options.package_data]
moneymirror = resources/*

[options.entry_points]
console_scripts =
    moneymirror = moneymirror.main:main